# recruiting-videos

./: README.md  claude.md
.github/: CODEOWNERS
.github/workflows/: boxscore-analyzer.yml  ci.yml
skills/boxscore_analyzer/: README.md  pyproject.toml  requirements.txt
skills/boxscore_analyzer/samples/: README.md  boxscore_sample_text.txt
skills/boxscore_analyzer/src/boxscore_analyzer/: __init__.py  cli.py  ocr.py  parser.py  stats.py
skills/boxscore_analyzer/tests/: test_integration.py  test_stats.py
src/: __init__.py  main.py
tests/: test_sample.py
